Fix line breaks in link titles; reduce width of items at wide screen sizes.

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,6 @@ main > ul > li > a {
 }
 @media (min-width:1400px) {
     main {
-        width: 40%;
+        width: 30%;
     }
 }
